src/test/ui/did_you_mean/issue-39802-show-5-trait-impls.stderr
error[E0277]: the trait bound `i8: Foo<i32>` is not satisfied
  --> $DIR/issue-39802-show-5-trait-impls.rs:34:5
   |
34 |     Foo::<i32>::bar(&1i8);
   |     ^^^^^^^^^^^^^^^ the trait `Foo<i32>` is not implemented for `i8`
   |
   = help: the following implementations were found:
             <i8: Foo<u8>>
             <i8: Foo<u16>>
             <i8: Foo<u32>>
             <i8: Foo<u64>>
             <i8: Foo<bool>>
   = note: required by `Foo::bar`

error[E0277]: the trait bound `u8: Foo<i32>` is not satisfied
  --> $DIR/issue-39802-show-5-trait-impls.rs:35:5
   |
35 |     Foo::<i32>::bar(&1u8);
   |     ^^^^^^^^^^^^^^^ the trait `Foo<i32>` is not implemented for `u8`
   |
   = help: the following implementations were found:
             <u8: Foo<u16>>
             <u8: Foo<u32>>
             <u8: Foo<u64>>
             <u8: Foo<bool>>
   = note: required by `Foo::bar`

error[E0277]: the trait bound `bool: Foo<i32>` is not satisfied
  --> $DIR/issue-39802-show-5-trait-impls.rs:36:5
   |
36 |     Foo::<i32>::bar(&true);
   |     ^^^^^^^^^^^^^^^ the trait `Foo<i32>` is not implemented for `bool`
   |
   = help: the following implementations were found:
             <bool: Foo<u8>>
             <bool: Foo<u16>>
             <bool: Foo<u32>>
             <bool: Foo<u64>>
           and 2 others
   = note: required by `Foo::bar`

error: aborting due to 3 previous errors

